@@ -1,3 +1,7 @@
+2005-10-24  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* feature: added support for sections in new config format
+
 2005-10-23  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* feature: enable unicode support by default
